# circle-mix

./: .gitignore  .pulse-final-fixes.patch  .pulse-hotfix.patch  aim-test-diagnostics.txt  aim-v1.patch.gz.b64  aim-v1.patch.gz.b64.0  aim-v1.patch.gz.b64.1  aim-v1.patch.gz.b64.2  aim-v1.patch.gz.b64.3  anima_osu_rechart.patch  anima_osu_rechart_snippet.js  apply_anima_osu_rechart.py  editor.html  index.html  manifest.webmanifest  package-lock.json  package.json  patch-result.txt  service-worker.js  style.css  test-result.txt
.github/: pull_request_template.md
.pulse-stage/: chunk-00  chunk-01  chunk-02  chunk-03  chunk-04  chunk-05  chunk-06  chunk-07
data/: ghost-rule-charts.json  routing-charts.json
docs/: aim-input-v1.md  cmix-v1.md  mobile-pwa-0.9.31-test-plan.md  mobile-slide-trace-judgement-v1.md  osu-to-cmix.md  pulse-v1.md  slide-trace-judgement-v1.md  windows-desktop.md  windows-installer-v1.md  windows-updater-release.md
schemas/: cmix-chart-v1.schema.json  cmix-manifest-v1.schema.json
scripts/: agent-fold-patch.py  agent-fold-test-fix.py  apply-0.9.39-pulse-guide.js  apply-auto-aim-visual-flow.js  apply-hit-sound-pass.js  apply-mobile-pwa-stability.js  apply-mobile-slide-trace-judgement-v1.js  apply-mouse-aim-feel.js  apply-pulse-aim-guide.js  apply-slide-trace-judgement-v1.js  apply-trace-endpoint-eligibility.js  audit-desktop-dist.js  build-routing-charts.py  check-release-metadata.js  desktop-visual-pass.js  osu-to-cmix-lib.js  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+91 files in other folders)
