[package]
name = "circle-mix"
version = "0.9.39"
description = "CIRCLE MIX Windows desktop application"
authors = ["CIRCLE MIX"]
edition = "2021"

[lib]
name = "circle_mix_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
